--- a/index.html
+++ b/index.html
@@ -78,37 +78,27 @@
         <div class="row">
             <div class="col-12 col-md-4">
                 <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <h3 class="my-3 fw-bold">Gatos vacunados</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    En el proceso de rescate y tratamiento de todos nuestros gatitos, nos dedicamos arduamente a cuidar de sus posibles padecimientos y evitar futuras enfermedades que podrían contraer. Para ello son vacunados y puestos en observación durante unos días.
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+                <h3 class="my-3 fw-bold">Preparación para la adopción</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Para que las familias estén altamente capacitadas para adoptar a nuestros gatitos, nosotros como organinzación nos encargamos de ofrecer cursos de paternidad y maternidad para aquellos que quieran aprender a cuidar de sus futuras mascotas!
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <h3 class="my-3 fw-bold">Con hogares en todo Chile</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Contamos con sedes a lo largo de todo el país, rescatando felinos en distintas regiones, para que puedan encontrar hogares en sus localidades y evitar largos y estresantes viajes.
                 </p>
             </div>
         </div>
     </section>
-
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
 
