--- a/index.html
+++ b/index.html
@@ -102,19 +102,16 @@
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-4 fw-bold text-center text-light mb-3">Gatos disponibles</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/Chispitas.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">Chispitas</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            Chispitas, el gato de blancura luminosa con toques de café en su pelaje, es un resplandeciente ejemplo de perseverancia. Su historia de rescate y tratamiento es una sinfonía de coraje, y su personalidad destaca por su curiosidad inquebrantable y su espíritu juguetón, recordándonos que la luz siempre puede brillar incluso en las sombras más profundas.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -124,14 +121,11 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/bigotes.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">Bigotes</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            Bigotes, el gato con elegantes rayas grises, es un viajero incansable en el mundo de las historias felinas. Su travesía de rescate y recuperación es una crónica de valentía y adaptación. Con ojos astutos y una determinación inquebrantable, Bigotes ha conquistado los corazones de quienes comparten su vida, mostrando que la exploración y la curiosidad son la esencia misma de su ser. Cada día, Bigotes nos recuerda que la vida está llena de aventuras esperando ser descubiertas, incluso en los momentos más desafiantes.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -141,14 +135,11 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/Tofu.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Tofu</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            Tofu, el gato de pelaje negro, es un misterioso y elegante felino con una personalidad independiente pero cariñosa. Observador y juguetón en sus momentos, prefiere la tranquilidad de su hogar, donde se muestra protector y relajado. Su enigma y encanto cautivan a quienes tienen el privilegio de conocerlo.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -159,6 +150,7 @@
         </div>
 
     </section>
+
 
 
 
