--- a/index.html
+++ b/index.html
@@ -156,13 +156,7 @@
 
     <section id="Contacto" class="container my-5">
 
-        <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
-
-        <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Doloribus
-            sapiente, autem delectus totam expedita
-            animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae
-            tempora quaerat?</p>
+        <h2 class="display-4 fw-bold text-center my-4">Contáctanos!</h2>
 
         <form>
 
@@ -195,8 +189,8 @@
 
 
 
-    <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+    <footer class="bg-black text-center text-light p-4">
+        <p class="mb-0">Fundación HappyBeans. Todos los derechos reservados.</p>
     </footer>
 
 
